Added tool selection config options and the possibility to disable Hive drops from Redstone mining.